--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                     </div>
                 </div>
             </section>
+            <small>This project was completed at Jackrabbit Design</small>
         </main>
     </body>
 </html>
