--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                             </div>
                             <div class="loan-links content-main">
                                 <header>Contact us to get started</header>
-                                <a href="" class="btn">make an appointment</a>
-                                <p><a class="alt" href="">questions</a></p>
+                                <a href="#" class="btn">make an appointment</a>
+                                <p><a class="alt" href="#">questions</a></p>
                             </div>
                         </div>
                     </div>
