--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="wrap">
                     <div class="header">
                         <div class="content-main introductory">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ea beatae quia commodi. A, perspiciatis nesciunt? At labore veritatis aperiam alias qui, itaque iste eius?  </p>
+                            <p>Welcome to the simple loan calculator. You can use this calculator to see what kind of payments you'll be making for any given loan amount with simple interest. Use the sliders or type an amount in the fields to get started.</p>
                         </div>
                         <div class="disclaimer">
                             <button href="#0" class="disclaimer-hover">disclaimer</button>
